--- a/index.html
+++ b/index.html
@@ -743,6 +743,20 @@
 
         <!-- Pricing Plans -->
         <div class="pricing-plans">
+          <!-- Free Plan -->
+          <div class="plan">
+            <h3>Starter</h3>
+            <div class="price">$0</div>
+            <ul>
+              <li>1 Free Consultation Request</li>
+              <li>Business Health Checklist</li>
+              <li>Email Support (72hr response)</li>
+              <li>Access to 1 Sample Report</li>
+              <li>7-Day Access to Member Vault</li>
+            </ul>
+            <button>Select Free Plan</button>
+          </div>
+
           <!-- Basic Plan -->
           <div class="plan">
             <h3>Basic</h3>
